primitives/api/test/tests/ui/adding_self_parameter.stderr
error: `self` as argument not supported.
 --> $DIR/adding_self_parameter.rs:3:11
  |
3 |         fn test(&self);
  |                 ^
