primitives/api/test/tests/ui/adding_self_parameter.rs
sp_api::decl_runtime_apis! {
	pub trait Api {
		fn test(&self);
	}
}

fn main() {}
